--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ on:
 
 jobs:
   build-android:
-    runs-on: ubuntu-latest # Gunakan server Ubuntu terbaru
+    # PERBAIKAN 1: Gunakan OS server yang stabil (Ubuntu 22.04)
+    runs-on: ubuntu-22.04
 
     steps:
       # Langkah 1: Ambil kode dari repositori Anda
@@ -22,16 +23,14 @@ jobs:
         with:
           path: ~/.buildozer
           key: buildozer-global-${{ hashFiles('buildozer.spec') }}
-          restore-keys: |
-            buildozer-global-
 
       # Langkah 3: Instal semua dependensi sistem
       - name: Install dependencies
         run: |
           sudo apt-get update
-          # PERBAIKAN: Instal versi spesifik dari build tools yang stabil
-          sudo apt-get install -y autoconf=2.69-14 automake=1:1.16.1-4ubuntu6 libtool-bin
-          sudo apt-get install -y python3-pip build-essential git
+          # PERBAIKAN 2: Instal versi default dari build tools yang tersedia di Ubuntu 22.04
+          sudo apt-get install -y autoconf automake libtool
+          sudo apt-get install -y python3-pip build-essential git python3-dev
           sudo apt-get install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
           sudo apt-get install -y libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev
           sudo apt-get install -y libgstreamer1.0-dev gstreamer1.0-plugins-base gstreamer1.0-plugins-good
